Comments for notebook

--- a/modelimplementation.ipynb
+++ b/modelimplementation.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implementing SVM, KNN, Random Forest and Logistic regression classification models for IRIS Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 164,
    "metadata": {},
@@ -34,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#Load the dataframe\n",
     "df=pd.read_csv('data/IRIS.csv')"
    ]
   },
@@ -131,7 +139,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#Glancing the dataset to see how data looks like\n",
     "df.head()"
    ]
   },
@@ -246,7 +254,6 @@
     }
    ],
    "source": [
-    "#Finding the dataset information\n",
     "df.describe()"
    ]
   },
@@ -275,6 +282,7 @@
     }
    ],
    "source": [
+    "#Finding the dataset information\n",
     "df.info()"
    ]
   },
@@ -298,6 +306,7 @@
     }
    ],
    "source": [
+    "#Trying to find how many values of each species has\n",
     "df['species'].value_counts()\n"
    ]
   },
@@ -307,8 +316,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# STransforming the target column to numerical using label encoder\n",
     "label_encoder = LabelEncoder()\n",
     "df['species']=label_encoder.fit_transform(df['species'])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Basic EDA (Exploratory Data Analysis)"
    ]
   },
   {
@@ -330,6 +348,9 @@
     }
    ],
    "source": [
+    "#Basic EDA\n",
+    "# Plotting several columns from the dataset\n",
+    "\n",
     "g = sns.pairplot(df, hue='species', markers='+')\n",
     "plt.show()"
    ]
@@ -363,6 +384,7 @@
     }
    ],
    "source": [
+    "#Box plot\n",
     "df.plot(kind='box',figsize=(16,9))"
    ]
   },
@@ -429,6 +451,7 @@
     }
    ],
    "source": [
+    "#Violin Plot using seaborn\n",
     "g = sns.violinplot(y='species', x='sepal_length', data=df, inner='quartile')\n",
     "plt.show()\n",
     "g = sns.violinplot(y='species', x='sepal_width', data=df, inner='quartile')\n",
@@ -458,6 +481,7 @@
     }
    ],
    "source": [
+    "#Histogram\n",
     "df.hist(edgecolor='black',figsize=(10,10))\n",
     "plt.show()"
    ]
@@ -511,6 +535,7 @@
     }
    ],
    "source": [
+    "#Assigning the target variable and independent variables\n",
     "X=df.drop('species',axis=1)\n",
     "y=df['species']\n",
     "print(X.shape)\n",
@@ -523,7 +548,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#split into train and test set\n",
+    "#split the dataset into train and test set\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=25)\n"
    ]
   },
@@ -544,10 +569,19 @@
     }
    ],
    "source": [
+    "#Finding the shape of train and test \n",
     "print(X_train.shape)\n",
     "print(y_train.shape)\n",
     "print(X_test.shape)\n",
     "print(y_test.shape)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modelling"
    ]
   },
   {
@@ -708,10 +742,7 @@
     "    # pickle.dump(pk_classifiers[idx],pickle_out)\n",
     "    with open(\"models/\" + pk_files[idx],\"wb\") as pickle_out:\n",
     "        pickle.dump(pk_classifiers[idx],pickle_out)\n",
-    "\n",
-    "\n",
-    "\n",
-    "    # pickle_out.close()"
+    "\n"
    ]
   },
   {
